fixed theme change flicker in nav

--- a/frontend/src/components/katip/actions-menu/ActionsMenu.scss
+++ b/frontend/src/components/katip/actions-menu/ActionsMenu.scss
@@ -11,6 +11,7 @@
   justify-content: space-between;
   margin: 0 auto;
   z-index: 3;
+  transition: background-color 200ms;
 }
 
 .top-menu-list {
